src/app.css
@import '@fontsource/fira-mono';
@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
@font-face {
	font-family: 'Fura Code';
	font-style: normal;
	font-weight: 400;
	src: url(/fonts/Fura\ Code\ Regular\ Nerd\ Font\ Complete.ttf) format('truetype');
}

:root {
	color-scheme: dark;

	--primary-color: #E6E6FA;
	--secondary-color: #33006F;
	--third-color: #1d1160;
	--muted-color: #D8BFD8;
	--text-color: #DDA0DD;
	--primary-font-family: 'Syne Mono', monospace;
	--secondary-font-family: 'Fura Code', monospace;
}

html {
	font-family: var(--primary-font-family);
}

body {
	min-height: 100vh;
	margin: 0;
}

pre, samp, code {
	font-family: var(--secondary-font-family);
}

pre {
	padding: 1rem;
	background-color: var(--secondary-color);
	background: linear-gradient(
		65deg,
		var(--secondary-color) 0%,
		var(--third-color) 100%
	);
	border-radius: 0.5rem;
	border-top: 0.5rem solid #452c63;
	white-space: pre-wrap;
	word-wrap: break-word;
	overflow-x: hidden;
}

