Fixed spacing

--- a/src/app.css
+++ b/src/app.css
@@ -33,6 +33,7 @@ pre, samp, code {
 }
 
 pre {
+	margin: 0 0 1rem 0;
 	padding: 1rem;
 	background-color: var(--secondary-color);
 	background: linear-gradient(
